--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.0.6",
     "@radix-ui/react-avatar": "^1.0.2",
+    "@radix-ui/react-checkbox": "^1.0.3",
     "@stitches/react": "^1.2.8"
   }
 }
