--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -19,7 +19,9 @@ jobs:
 
       - run: npm ci
       - run: npm run build
-
+        env: 
+          TURBO_TOKEN: lTZYnDCOf1DhZpDt3z5us7A1
+          TURBO_TEAM: thg021
       - name: Deploy storybook
         working-directory: ./packages/docs
         run: npm run deploy-storybook -- --ci --existing-output-dir=storybook-static
