--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ignite-ui/tokens",
+  "name": "@thgsdev-ui/tokens",
   "version": "1.0.0",
   "description": "",
   "main": "./dist/index.mjs",
@@ -15,8 +15,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@ignite-ui/eslint-config": "*",
-    "@ignite-ui/ts-config": "*",
+    "@thgsdev-ui/eslint-config": "*",
+    "@thgsdev-ui/ts-config": "*",
     "tsup": "^6.6.3",
     "typescript": "^4.9.5"
   }
