--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -25,7 +25,9 @@
     "@storybook/testing-library": "^0.0.13",
     "@vitejs/plugin-react": "^2.1.0",
     "babel-loader": "^8.2.5",
-    "vite": "^3.1.4"
+    "vite": "^3.1.4", 
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "dependencies": {
     "@thgsdev-ui/eslint-config": "*",
@@ -33,8 +35,6 @@
     "@thgsdev-ui/tokens": "*",
     "@thgsdev-ui/ts-config": "*",
     "phosphor-react": "^1.4.1",
-    "polished": "^4.2.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "polished": "^4.2.2"  
   }
 }
