--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -27,6 +27,8 @@
     "@phosphor-icons/react": "^2.0.6",
     "@radix-ui/react-avatar": "^1.0.2",
     "@radix-ui/react-checkbox": "^1.0.3",
+    "@radix-ui/react-toast": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.0.5",
     "@stitches/react": "^1.2.8"
   }
 }
