--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@thgsdev-ui/tokens",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "",
-  "main": "./dist/index.mjs",
+  "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "scripts": {
